--- a/dreamhotel.html
+++ b/dreamhotel.html
@@ -124,7 +124,7 @@
 <body>
   <!-- Header and Navigation -->
   <header>
-    <img src="images/dreamstaylogo.png" alt="DreamStay Hotel Logo" style="height:120px; margin-bottom:0.5em;background-color: azure;position: relative;">
+    <img src="dreamstaylogo.png" alt="DreamStay Hotel Logo" style="height:120px; margin-bottom:0.5em;background-color: azure;position: relative;">
     <h1 style="font-size:xx-large;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; color:#701d99;">DreamStay Hotel</h1>
     <nav>
       <div class="nav-links" style="flex-grow:1; text-align: justify; font-size:x-large;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
@@ -157,7 +157,7 @@
   <!-- Room List -->
   <section class="room-list">
     <div class="room">
-      <img src="images/standardroom1.jpg" alt="Standard Room">
+      <img src="standardroom1.jpg" alt="Standard Room">
       <h3>Standard Room</h3>
       <p>₱2,500/night</p>
       <p>Cozy room with queen bed, ensuite bathroom, and city view.</p>
@@ -175,7 +175,7 @@
       </div>
     </div>
     <div class="room">
-      <img src="images/deluxeroom.png" alt="Deluxe Room">
+      <img src="deluxeroom.png" alt="Deluxe Room">
       <h3>Deluxe Room</h3>
       <p>₱4,000/night</p>
       <p>Spacious room with king bed, ensuite bathroom, and balcony.</p>
@@ -194,7 +194,7 @@
       </div>
     </div>
     <div class="room">
-      <img src="images/suiteroom.png" alt="Suite">
+      <img src="suiteroom.png" alt="Suite">
       <h3>Suite</h3>
       <p>₱6,500/night</p>
       <p>Private suite with king bed, ensuite bathroom, and living room.</p>
@@ -214,7 +214,7 @@
       </div>
     </div>
     <div class="room">
-      <img src="images/familyroom.png" alt="Family Room">
+      <img src="familyroom.png" alt="Family Room">
       <h3>Family Room</h3>
       <p>₱7,500/night</p>
       <p>Spacious family room with two queen beds, ensuite bathroom, and play area for kids.</p>
@@ -427,7 +427,7 @@
           const rooms = {
             standard: {
               title: "Standard Room",
-              img: "images/standardroom1.jpg",
+              img: "standardroom1.jpg",
               photos: [
                 "images/standardroom1.jpg",
                 "images/standardroom2.jpg"
@@ -446,7 +446,7 @@
             },
             deluxe: {
               title: "Deluxe Room",
-              img: "images/deluxeroom.png",
+              img: "deluxeroom.png",
               photos: [
                 "images/deluxeroom.png"
               ],
@@ -465,7 +465,7 @@
             },
             suite: {
               title: "Suite",
-              img: "images/suiteroom.png",
+              img: "suiteroom.png",
               photos: [
                 "images/suiteroom.png"
               ],
@@ -485,7 +485,7 @@
             },
             family: {
               title: "Family Room",
-              img: "images/familyroom.png",
+              img: "familyroom.png",
               photos: [
                 "images/familyroom.png"
               ],
@@ -695,51 +695,51 @@
   <!-- Gallery -->
   <div class="gallery">
     <figure>
-      <img alt="Pool" src="images/pool.jpg" onclick="openLightbox(this.src)">
+      <img alt="Pool" src="pool.jpg" onclick="openLightbox(this.src)">
       <figcaption>Outdoor Pool</figcaption>
     </figure>
     <figure>
-      <img alt="Infinity Pool" src="images/infinitypool.png" onclick="openLightbox(this.src)">
+      <img alt="Infinity Pool" src="infinitypool.png" onclick="openLightbox(this.src)">
       <figcaption>Infinity Pool</figcaption>
     </figure>
     <figure>
-      <img alt="Night Pool" src="images/nightpool.png" onclick="openLightbox(this.src)">
+      <img alt="Night Pool" src="nightpool.png" onclick="openLightbox(this.src)">
       <figcaption>Pool at Night</figcaption>
     </figure>
     <figure>
-      <img alt="Lobby" src="images/lobby.png" onclick="openLightbox(this.src)">
+      <img alt="Lobby" src="lobby.png" onclick="openLightbox(this.src)">
       <figcaption>Modern Lobby</figcaption>
     </figure>
     <figure>
-      <img alt="Restaurant" src="images/restaurant.png" onclick="openLightbox(this.src)">
+      <img alt="Restaurant" src="restaurant.png" onclick="openLightbox(this.src)">
       <figcaption>Restaurant & Bar</figcaption>
     </figure>
     <figure>
-      <img alt="Gym" src="images/gym.png" onclick="openLightbox(this.src)">
+      <img alt="Gym" src="gym.png" onclick="openLightbox(this.src)">
       <figcaption>Fitness Center</figcaption>
     </figure>
     <figure>
-      <img alt="Spa" src="images/spa.png" onclick="openLightbox(this.src)">
+      <img alt="Spa" src="spa.png" onclick="openLightbox(this.src)">
       <figcaption>Spa & Wellness</figcaption>
     </figure>
     <figure>
-      <img alt="Conference Room" src="images/conferenceroom.png" onclick="openLightbox(this.src)">
+      <img alt="Conference Room" src="conferenceroom.png" onclick="openLightbox(this.src)">
       <figcaption>Conference Room</figcaption>
     </figure>
     <figure>
-      <img alt="Standard Room 1" src="images/standardroom1.jpg" onclick="openLightbox(this.src)">
+      <img alt="Standard Room 1" src="standardroom1.jpg" onclick="openLightbox(this.src)">
       <figcaption>Standard Room 1</figcaption>
     </figure>
     <figure>
-      <img alt="Standard Room 2" src="images/standardroom2.jpg" onclick="openLightbox(this.src)">
+      <img alt="Standard Room 2" src="standardroom2.jpg" onclick="openLightbox(this.src)">
       <figcaption>Standard Room 2</figcaption>
     </figure>
     <figure>
-      <img alt="Deluxe Room" src="images/deluxeroom.png" onclick="openLightbox(this.src)">
+      <img alt="Deluxe Room" src="deluxeroom.png" onclick="openLightbox(this.src)">
       <figcaption>Deluxe Room 1</figcaption>
     </figure>
     <figure>
-      <img alt="Suite" src="images/suiteroom.png" onclick="openLightbox(this.src)">
+      <img alt="Suite" src="suiteroom.png" onclick="openLightbox(this.src)">
       <figcaption>Suite 1</figcaption>
     </figure>
   </div>
@@ -790,7 +790,7 @@
       <div style="display:flex; flex-wrap:wrap; gap:2em; justify-content:center;">
         <!-- Standard Room -->
         <div style="flex:1; min-width:200px; background:#fff; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.04); padding:1em;">
-          <img src="images/standardroom1.jpg" alt="Standard Room" style="width:100%; border-radius:8px; margin-bottom:1em;">
+          <img src="standardroom1.jpg" alt="Standard Room" style="width:100%; border-radius:8px; margin-bottom:1em;">
           <h3>Standard Room</h3>
           <ul style="text-align:left;">
             <li>Queen bed</li>
@@ -802,7 +802,7 @@
         </div>
         <!-- Deluxe Room -->
         <div style="flex:1; min-width:200px; background:#fff; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.04); padding:1em;">
-          <img src="images/deluxeroom.png" alt="Deluxe Room" style="width:100%; border-radius:8px; margin-bottom:1em;">
+          <img src="deluxeroom.png" alt="Deluxe Room" style="width:100%; border-radius:8px; margin-bottom:1em;">
           <h3>Deluxe Room</h3>
           <ul style="text-align:left;">
             <li>King bed</li>
@@ -814,7 +814,7 @@
         </div>
         <!-- Suite -->
         <div style="flex:1; min-width:200px; background:#fff; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.04); padding:1em;">
-          <img src="images/suiteroom.png" alt="Suite" style="width:100%; border-radius:8px; margin-bottom:1em;">
+          <img src="suiteroom.png" alt="Suite" style="width:100%; border-radius:8px; margin-bottom:1em;">
           <h3>Suite</h3>
           <ul style="text-align:left;">
             <li>King bed</li>
@@ -826,7 +826,7 @@
         </div>
         <!-- Family Room -->
         <div style="flex:1; min-width:200px; background:#fff; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.04); padding:1em;">
-          <img src="images/familyroom.png" alt="Family Room" style="width:100%; border-radius:8px; margin-bottom:1em;">
+          <img src="familyroom.png" alt="Family Room" style="width:100%; border-radius:8px; margin-bottom:1em;">
           <h3>Family Room</h3>
           <ul style="text-align:left;">
             <li>Two queen beds</li>
@@ -861,24 +861,24 @@
       <h2 style="text-align:center; margin-bottom:1em;">Gallery</h2>
       <div style="display:flex; flex-wrap:wrap; gap:1em; justify-content:center;">
         <!-- Make each image clickable for lightbox/zoom -->
-        <img src="images/pool.jpg" alt="Pool" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/infinitypool.png" alt="Infinity Pool" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/nightpool.png" alt="Night Pool" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/lobby.png" alt="Lobby" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/restaurant.png" alt="Restaurant" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/gym.png" alt="Gym" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/spa.png" alt="Spa" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/conferenceroom.png" alt="Conference Room" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/standardroom1.jpg" alt="Standard Room 1" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/standardroom2.jpg" alt="Standard Room 2" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/deluxeroom.png" alt="Deluxe Room" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/suiteroom.png" alt="Suite" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/familyroom.png" alt="Family Room" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/restaurant2.png" alt="Restaurant 2" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/lounge.png" alt="Lounge" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/bar.png" alt="Bar" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/playground.png" alt="Playground" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
-        <img src="images/hotelexterior.png" alt="Hotel Exterior" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="pool.jpg" alt="Pool" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="infinitypool.png" alt="Infinity Pool" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="nightpool.png" alt="Night Pool" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="lobby.png" alt="Lobby" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="restaurant.png" alt="Restaurant" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="gym.png" alt="Gym" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="spa.png" alt="Spa" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="conferenceroom.png" alt="Conference Room" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="standardroom1.jpg" alt="Standard Room 1" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="standardroom2.jpg" alt="Standard Room 2" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="deluxeroom.png" alt="Deluxe Room" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="suiteroom.png" alt="Suite" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="familyroom.png" alt="Family Room" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="restaurant2.png" alt="Restaurant 2" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="lounge.png" alt="Lounge" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="bar.png" alt="Bar" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="playground.png" alt="Playground" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
+        <img src="hotelexterior.png" alt="Hotel Exterior" style="width:180px; border-radius:8px; cursor:pointer;" onclick="openLightbox(this.src)">
         </div>
     </div>
   </div>
@@ -940,11 +940,11 @@
     </div>
     <div style="text-align:center; margin-top:2em;">
       <button id="google-signin" style="background:#4285F4; color:#fff; border:none; border-radius:5px; padding:0.7em 2em; font-size:1em; margin-bottom:1em; cursor:pointer;">
-        <img src="images/google-icon.png" alt="Google" style="height:20px; vertical-align:middle; margin-right:8px;"> Sign in with Google
+        <img src="google-icon.png" alt="Google" style="height:20px; vertical-align:middle; margin-right:8px;"> Sign in with Google
       </button>
       <br>
       <button id="fb-signin" style="background:#3b5998; color:#fff; border:none; border-radius:5px; padding:0.7em 2em; font-size:1em; cursor:pointer;">
-        <img src="images/facebook-icon.png" alt="Facebook" style="height:20px; vertical-align:middle; margin-right:8px;"> Sign in with Facebook
+        <img src="facebook-icon.png" alt="Facebook" style="height:20px; vertical-align:middle; margin-right:8px;"> Sign in with Facebook
       </button>
     </div>
   </div>
@@ -1125,7 +1125,7 @@
       const rooms = {
         standard: {
           title: "Standard Room",
-          img: "images/standardroom1.jpg",
+          img: "standardroom1.jpg",
           photos: [
             "images/standardroom1.jpg",
             "images/standardroom2.jpg"
@@ -1144,7 +1144,7 @@
         },
         deluxe: {
           title: "Deluxe Room",
-          img: "images/deluxeroom.png",
+          img: "deluxeroom.png",
           photos: [
             "images/deluxeroom.png"
           ],
@@ -1163,7 +1163,7 @@
         },
         suite: {
           title: "Suite",
-          img: "images/suiteroom.png",
+          img: "suiteroom.png",
           photos: [
             "images/suiteroom.png"
           ],
@@ -1183,7 +1183,7 @@
         },
         family: {
           title: "Family Room",
-          img: "images/familyroom.png",
+          img: "familyroom.png",
           photos: [
             "images/familyroom.png"
           ],
@@ -1251,4 +1251,5 @@
       document.getElementById('conversionModal').style.display = 'flex';
   </script>
 </body>
+
 </html>
