--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="images/dreamstaylogo.png" alt="DreamStay Hotel Logo">
+      <img src="dreamstaylogo.png" alt="DreamStay Hotel Logo">
       <h1>DreamStay Hotel</h1>
       <nav>
         <a href="index.html">Home</a>
@@ -51,4 +51,5 @@
     </footer>
   </div>
 </body>
+
 </html>
