--- a/souvenir.html
+++ b/souvenir.html
@@ -82,7 +82,7 @@
   {
     name: 'DreamStay Kids Shirt',
     basePrice: 350,
-    img: 'souvenir images/kidsShirt.png',
+    img: 'kidsShirt.png',
     desc: 'Kids cotton shirt with hotel logo.',
     sizes: [
       { label: 'S', add: 0 },
@@ -95,7 +95,7 @@
   {
     name: 'DreamStay Adult Shirt',
     basePrice: 450,
-    img: 'souvenir images/adultShirt.png',
+    img: 'adultShirt.png',
     desc: 'Adult cotton shirt with hotel logo.',
     sizes: [
       { label: 'S', add: 0 },
@@ -106,13 +106,13 @@
     colors: ['White', 'Black', 'Blue', 'Red'],
     category: 'Adult'
   },
-  { name: 'DreamStay Mug', price: 200, img: 'souvenir images/mug.png', desc: 'Ceramic mug with DreamStay design.' },
-  { name: 'DreamStay Hat', price: 350, img: 'souvenir images/hat.png', desc: 'Stylish cap with embroidered logo.' },
-  { name: 'Local Snacks', price: 180, img: 'souvenir images/mix nuts.png', desc: 'Assorted specialty treats from Port Macquarie.' },
-  { name: 'Artisan Crafts', price: 600, img: 'souvenir images/artisan craft.png', desc: 'Handmade crafts by local artists.' },
-  { name: 'DreamStay Postcard', price: 50, img: 'souvenir images/postcard.png', desc: 'Beautiful postcard for your travel memories.' },
-  { name: 'Travel Toiletries', price: 120, img: 'souvenir images/toiletries.png', desc: 'Essential travel-size toiletries kit.' },
-  { name: 'Gift Wrapping', price: 30, img: 'souvenir images/giftwrap.png', desc: 'Gift wrapping service for your souvenirs.' }
+  { name: 'DreamStay Mug', price: 200, img: 'mug.png', desc: 'Ceramic mug with DreamStay design.' },
+  { name: 'DreamStay Hat', price: 350, img: 'hat.png', desc: 'Stylish cap with embroidered logo.' },
+  { name: 'Local Snacks', price: 180, img: 'mix nuts.png', desc: 'Assorted specialty treats from Port Macquarie.' },
+  { name: 'Artisan Crafts', price: 600, img: 'artisan craft.png', desc: 'Handmade crafts by local artists.' },
+  { name: 'DreamStay Postcard', price: 50, img: 'postcard.png', desc: 'Beautiful postcard for your travel memories.' },
+  { name: 'Travel Toiletries', price: 120, img: 'stoiletries.png', desc: 'Essential travel-size toiletries kit.' },
+  { name: 'Gift Wrapping', price: 30, img: 'sgiftwrap.png', desc: 'Gift wrapping service for your souvenirs.' }
 ];
     let cart = [];
     function renderProducts() {
@@ -254,4 +254,5 @@
     document.addEventListener('DOMContentLoaded', renderProducts);
   </script>
 </body>
+
 </html>
