--- a/signIn.html
+++ b/signIn.html
@@ -35,11 +35,11 @@
     </div>
     <div style="text-align:center; margin-top:2em;">
       <button id="google-signin" style="background:#4285F4; color:#fff; border:none; border-radius:5px; padding:0.7em 2em; font-size:1em; margin-bottom:1em; cursor:pointer;">
-        <img src="images/google-icon.png" alt="Google" style="height:20px; vertical-align:middle; margin-right:8px;"> Sign in with Google
+        <img src="google-icon.png" alt="Google" style="height:20px; vertical-align:middle; margin-right:8px;"> Sign in with Google
       </button>
       <br>
       <button id="fb-signin" style="background:#3b5998; color:#fff; border:none; border-radius:5px; padding:0.7em 2em; font-size:1em; cursor:pointer;">
-        <img src="images/facebook-icon.png" alt="Facebook" style="height:20px; vertical-align:middle; margin-right:8px;"> Sign in with Facebook
+        <img src="facebook-icon.png" alt="Facebook" style="height:20px; vertical-align:middle; margin-right:8px;"> Sign in with Facebook
       </button>
     </div>
   </div>
@@ -75,4 +75,5 @@
     };
   </script>
 </body>
+
 </html>
