--- a/souvenir.html
+++ b/souvenir.html
@@ -111,8 +111,8 @@
   { name: 'Local Snacks', price: 180, img: 'mix nuts.png', desc: 'Assorted specialty treats from Port Macquarie.' },
   { name: 'Artisan Crafts', price: 600, img: 'artisan craft.png', desc: 'Handmade crafts by local artists.' },
   { name: 'DreamStay Postcard', price: 50, img: 'postcard.png', desc: 'Beautiful postcard for your travel memories.' },
-  { name: 'Travel Toiletries', price: 120, img: 'stoiletries.png', desc: 'Essential travel-size toiletries kit.' },
-  { name: 'Gift Wrapping', price: 30, img: 'sgiftwrap.png', desc: 'Gift wrapping service for your souvenirs.' }
+  { name: 'Travel Toiletries', price: 120, img: 'toiletries.png', desc: 'Essential travel-size toiletries kit.' },
+  { name: 'Gift Wrapping', price: 30, img: 'giftwrap.png', desc: 'Gift wrapping service for your souvenirs.' }
 ];
     let cart = [];
     function renderProducts() {
@@ -256,3 +256,4 @@
 </body>
 
 </html>
+
