--- a/dreamhotel.html
+++ b/dreamhotel.html
@@ -761,6 +761,7 @@
 
   <!-- Footer -->
   <footer>
+    <img src="images/myphoto.jpg" alt="myphoto" style="width:50px; height:50px; border-radius:50%; vertical-align:middle; margin-right:10px;">
     <p>Follow us:</p>
     <a href="https://facebook.com/dreamstayhotel" target="_blank">Facebook</a> |
     <a href="https://instagram.com/dreamstayhotel" target="_blank">Instagram</a>
@@ -1253,6 +1254,7 @@
 </body>
 
 </html>
+
 
 
 
