--- a/dreamhotel.html
+++ b/dreamhotel.html
@@ -763,8 +763,7 @@
   <footer>
     <img src="myphoto.jpg" alt="myphoto" style="width:80px; height:80px; border-radius:50%; vertical-align:middle; margin-right:10px;">
     <p>Follow us:</p>
-    <a href="https://facebook.com/dreamstayhotel" target="_blank">Facebook</a> |
-    <a href="https://instagram.com/dreamstayhotel" target="_blank">Instagram</a>
+    <p>Coming soon on Facebook & Instagram!</p>
   </footer>
 
   <!-- Modals -->
@@ -1254,6 +1253,7 @@
 </body>
 
 </html>
+
 
 
 
